<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.example.admin.dta_android_tp7.ActivitePage2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_question_was" />

        <TextView
            android:id="@+id/answeredQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_question"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/title_response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_answer_was" />

        <TextView
            android:id="@+id/goodAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_answer"
            android:textAlignment="center"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/title_currentScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_answers_count" />

        <TextView
            android:id="@+id/result_currentScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_answer"
            android:textAlignment="center"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="button_continue"
            android:text="@string/text_continue"
            tools:layout_editor_absoluteX="280dp"
            tools:layout_editor_absoluteY="428dp" />

    </LinearLayout>

</LinearLayout>
